2001-08-01 John R. Jackson (jrj@purdue.edu)

	* common-src/debug.c: Only rename files that end in ".debug".

2001-08-01 John R. Jackson (jrj@purdue.edu)

	* common-src/pipespawn.c: Show empty pipespawn() args as "".

2001-07-31 Ben Lewis (bhlewis@purdue.edu) via John R. Jackson (jrj@purdue.edu)

	* configure.in: Add missing CAM header checks from the 2.5 branch.

2001-07-30 John R. Jackson (jrj@purdue.edu)

	* configure.in: Add CAM SCSI support section from the 2.5 branch.

2001-07-30 Ben Lewis (bhlewis@purdue.edu) via John R. Jackson (jrj@purdue.edu)

	* recover-src/amrecover.c: Improve the "Unexpected server end of file"
	  message.

2001-07-30 Ben Lewis (bhlewis@purdue.edu) via John R. Jackson (jrj@purdue.edu)

	* man/amanda.8.in: Document includefile.
	* man/amdump.8.in: Add note that local crontab documention should be
	  checked for proper syntax.
	* man/amrecover.8.in: Document use of PAGER environment variable.
	* man/amrestore.8: Document that GNU tar must be used as some vendor
	  tar programs cannot read GNU tar format.
	* docs/FAQ: Update location of online FAQ.

2001-07-25 John R. Jackson <jrj@purdue.edu>

	* docs/TAPE.CHANGER: Changes from Ben Lewis (bhlewis@purdue.edu) to
	  document the new (but optional) searchable features.

2001-07-20 John R. Jackson <jrj@purdue.edu>

	* common-src/security.c: Use NUM_STR_SIZE instead of hard coded
	  constant.
	* common-src/versuff.c.in: Ditto.

2001-07-19 John R. Jackson <jrj@purdue.edu>

	* common-src/error.c: Add new function errordump() that acts like
	  error() but calls abort() to (try to) drop core.
	* common-src/amanda.h: Prototype.
	* common-src/alloc.c: Call errordump() instead of error() for some
	  memory allocation failures to aid traceback.

2001-07-19 John R. Jackson <jrj@purdue.edu>

	* server-src/amadmin.c: Improve the error message when read_conffile()
	  fails.
	* server-src/amcheck.c: Ditto.
	* server-src/amcleanupdisk.c: Ditto.
	* server-src/amflush.c: Ditto.
	* server-src/amlabel.c: Ditto.